--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="contenedorPadre">
 
     <div id="contenedorImagen">
-        <img src="../../assets/imagenes/peter.png" id="fotoPedro">
+        <img src="./assets/imagenes/peter.png" id="fotoPedro">
         
     </div>
 
