--- a/src/app/fotos/fotos.component.html
+++ b/src/app/fotos/fotos.component.html
@@ -9,19 +9,19 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../../assets/imagenes/foto1.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/imagenes/foto1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/imagenes/foto2.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/imagenes/foto2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/imagenes/foto4.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/imagenes/foto4.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/imagenes/foto5.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/imagenes/foto5.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/imagenes/foto6.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/imagenes/foto6.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -36,10 +36,10 @@
 
   <!-- Grid de fotos (inicialmente oculto en dispositivos móviles) -->
 <div class="grid-container mobile-hidden">
-  <div class="grid-item"><img src="../../assets/imagenes/foto1.jpg" alt="Foto 1"></div>
-  <div class="grid-item"><img src="../../assets/imagenes/foto2.jpg"alt="Foto 2"></div>
-  <div class="grid-item"><img src="../../assets/imagenes/foto4.jpg" alt="Foto 3"></div>
-  <div class="grid-item"><img src="../../assets/imagenes/foto5.jpg" alt="Foto 4"></div>
-  <div class="grid-item"><img src="../../assets/imagenes/foto6.jpg" alt="Foto 5"></div>
-  <div class="grid-item"><img src="../../assets/imagenes/foto1.jpg" alt="Foto 6"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto1.jpg" alt="Foto 1"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto2.jpg"alt="Foto 2"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto4.jpg" alt="Foto 3"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto5.jpg" alt="Foto 4"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto6.jpg" alt="Foto 5"></div>
+  <div class="grid-item"><img src="./assets/imagenes/foto1.jpg" alt="Foto 6"></div>
 </div>
