--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,9 +45,12 @@
     }
 
     #contenedorTexto {
-        margin: 10px;
-        width: 100%;
-        margin-top: 20px; /* Espacio adicional entre la imagen y el texto */
+        margin:0 auto !important;
+        text-align: center;
+        width: 85%;
+        margin-left:5% !important;
+        margin-top: 20px; 
+        background-color: red;
         
     }
 
